[package]
name = "tana-auth"
version = "0.1.0"
edition = "2021"
authors = ["Tana Network"]
description = "Authentication and JWT utilities for Tana with Ed25519 signatures"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tananetwork/tana-auth"
keywords = ["tana", "auth", "jwt", "ed25519", "wasm"]
categories = ["wasm", "authentication", "cryptography"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
ed25519-dalek = "2.1"
base64 = "0.22"
sha2 = "0.10"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Optimize for size when building WASM
opt-level = "s"
lto = true
